hphp/hack/test/typecheck/coeffects/enum-class_nonvariant-access.php.rust_elab.exp
File "enum-class_nonvariant-access.php", line 5, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
